[package]
name = "redis-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bigdecimal = "0.3.0"
env_logger = "0.9.0"
log = "0.4.14"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde_json = "1.0.75"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
