[package]
name = "rust-tonic2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.53"
config = "0.11.0"
metrics = "0.18.0"
metrics-exporter-prometheus = "0.8.0"
prost = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6"
