[package]
name = "curl_and_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
hyper = { version = "0.14.16", features = ["full"] }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.16.1", features = ["full"] }
