[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
tokio = { version = "1.16.1", features = ["full"] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6"